# perft_gpu

./: CMakeLists.txt  FancyMagics.h  GlobalVars.cpp  LICENSE  Magics.cpp  Makefile  MoveGenerator088.h  MoveGeneratorBitboard.h  Perft_GPU_VS2012.sln  Perft_GPU_VS2012.vcxproj  README  UciInterface.cpp  chess.h  launcher.h  network.cpp  perft.cu  perft.sln  perft_bb.h  perft_gpu.sln  perft_gpu.vcproj  perft_gpu.vcxproj  switches.h  util.cpp  utils.h
moderngpu-master/include/device/: deviceutil.cuh  loadstore.cuh
moderngpu-master/include/kernels/: intervalmove.cuh  scan.cuh
moderngpu-master/include/util/: static.h
